check empty input & rename class

--- a/styles/style.less
+++ b/styles/style.less
@@ -116,9 +116,7 @@ input, textarea {
 		color: @brownColor;
 		font-size: 12px;
 	}
-	.save,
-	input,
-	textarea {
+	.save {
 		display: none;
 	}
 }
@@ -162,9 +160,6 @@ input, textarea {
 		background: pink;
 	}
 }
-.hide-button {
-	display: none;
-}
-.hide-search{
+.hide-el {
 	display: none;
 }
