--- a/styles/style.less
+++ b/styles/style.less
@@ -105,7 +105,7 @@ body {
 		width: 50%;
 		height: 5px;
 	
-	&:nth-child(odd):after {
+	&:nth-child(odd):before {
 		transform: rotate(5deg);
 	}
 	.note-title {
