--- a/styles/style.less
+++ b/styles/style.less
@@ -4,7 +4,7 @@
 @clrBlue: #b2cccc;
 @clrViolet: #ac4aff;
 
-@import url(reset.css);
+// @import url(reset.css);
 @font-face {
 	font-family: scrawl;
 	src: url(fonts/scrawl.woff);
